Thu Dec 16 22:58:21 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Changed --help output to fit into 80 characters...

Thu Dec 16 22:10:50 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>

	* Initial import. Feh is currently at 0.5.0 release level.
