@@ -1,3 +1,7 @@
+Fri Dec 17 02:09:20 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>
+
+	* Right-clicking in multi-image mode now closes ALL windows.
+
 Thu Dec 16 22:58:21 1999  Tom Gilbert  <gilbertt@tomgilbert.freeserve.co.uk>
 
 	* Changed --help output to fit into 80 characters...
